crates/app/vaco-textformat/tests/snapshots/snapshots__json_compact.snap
---
source: crates/app/vaco-textformat/tests/snapshots.rs
expression: "render(\"json=c=1\", FormatOpts :: default())"
---
{
    "programs": [

    ],
    "streams": [
        { "index": 0, "codec_name": "aac", "sample_rate": "44100", "channels": 1, "start_time": "0.000000", "bit_rate": "70303",
            "disposition": { "default": 1 },
            "tags": { "language": "und", "WE-IRD_KEY.1": "v=1,c:2|q\"3\\4;e[f]#g <&> ünï" },
            "side_data_list": [
                { "side_data_type": "Skip Samples", "skip_samples": 1024 }
            ] },
        { "index": 1, "codec_name": "aac", "sample_rate": "44100", "channels": 1, "start_time": "0.000000", "bit_rate": "70303",
            "disposition": { "default": 1 },
            "tags": { "language": "und", "WE-IRD_KEY.1": "v=1,c:2|q\"3\\4;e[f]#g <&> ünï" },
            "side_data_list": [
                { "side_data_type": "Skip Samples", "skip_samples": 1024 }
            ] }
    ],
    "format": { "filename": "t.mkv", "size": "10028",
        "tags": { "title": "hello" } }
}
