crates/app/vaco-textformat/tests/snapshots/snapshots__xml_writer.snap
---
source: crates/app/vaco-textformat/tests/snapshots.rs
expression: "render(\"xml\", FormatOpts :: default())"
---
<?xml version="1.0" encoding="UTF-8"?>
<ffprobe>
    <programs>
    </programs>

    <streams>
        <stream index="0" codec_name="aac" sample_rate="44100" channels="1" start_time="0.000000" bit_rate="70303">
            <disposition default="1"/>
            <tags>
                <tag key="language" value="und"/>
                <tag key="WE-IRD_KEY.1" value="v=1,c:2|q&quot;3\4;e[f]#g &lt;&amp;&gt; ünï"/>
            </tags>
            <side_data_list>
                <side_data type="Skip Samples">
                    <side_datum key="side_data_type" value="Skip Samples"/>
                    <side_datum key="skip_samples" value="1024"/>
                </side_data>
            </side_data_list>
        </stream>
        <stream index="1" codec_name="aac" sample_rate="44100" channels="1" start_time="0.000000" bit_rate="70303">
            <disposition default="1"/>
            <tags>
                <tag key="language" value="und"/>
                <tag key="WE-IRD_KEY.1" value="v=1,c:2|q&quot;3\4;e[f]#g &lt;&amp;&gt; ünï"/>
            </tags>
            <side_data_list>
                <side_data type="Skip Samples">
                    <side_datum key="side_data_type" value="Skip Samples"/>
                    <side_datum key="skip_samples" value="1024"/>
                </side_data>
            </side_data_list>
        </stream>
    </streams>

    <format filename="t.mkv" size="10028">
        <tags>
            <tag key="title" value="hello"/>
        </tags>
    </format>
</ffprobe>
